Spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -410,7 +410,7 @@
   color: rgba(245, 245, 245, 0.6);
   font-family: "PP Neue Montreal", sans-serif;
   font-size: 6rem;
-  margin-top: 40px;
+  margin-bottom: 80px;
   white-space: nowrap;
 }
 
