--- a/scss/project.scss
+++ b/scss/project.scss
@@ -51,7 +51,7 @@ $font-color-whiteish: #f1F1f1;
     color: rgb(245 245 245 / 60%);
     font-family: $font-family-pp-neue-montreal;
     font-size: 6rem;
-    margin-top: 40px;
+    margin-bottom: 80px;
     white-space: nowrap;
 }
 
